API documentation alignment issue fixed

--- a/css/integration.css
+++ b/css/integration.css
@@ -200,7 +200,7 @@ font-size: 20px;
     padding-right: 5%;
 }
 .left_head{
-    font-size: 24px;
+    font-size: 22px;
     font-family: 'Inter', 'sans-serif';
     font-weight: 600;
     line-height: 28.8px;
